fixed responsiveness on mobile

--- a/src/Components/Buttons/Button.css
+++ b/src/Components/Buttons/Button.css
@@ -9,17 +9,17 @@
     cursor: pointer;
     font-weight: 600;
     transition: 0.2s ease-in-out;
-    -webkit-transition: 0.2s ease-in-out;
-    -moz-transition: 0.2s ease-in-out;
-    -ms-transition: 0.2s ease-in-out;
-    -o-transition: 0.2s ease-in-out;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
 }
 
 .HB button:hover {
     transform: scale(1.02);
 }
 
-@media (max-width:820px) {
+@media (max-width:1024px) {
     .HB button {
         width: 100%;
         font-size: 1.6rem;
