--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -27,11 +27,13 @@ body {
     justify-content: space-between;
     z-index: 2;
     padding: 0 2%;
-    font-size: 1.3rem;
+    font-size: 1rem;
+    font-weight: bold;
 }
 
 .navbar-list {
     list-style: none;
+    cursor: pointer;
 }
 
 .navbar-list2 {
@@ -51,9 +53,9 @@ body {
     gap: 4rem;
 }
 
-@media (max-width: 1580px) {
+@media (max-width: 1280px) {
   .navbar {
-    font-size: 1rem;
+    font-size: 0.7rem;
   }
 }
 
