--- a/src/Components/Transaction/Transaction.css
+++ b/src/Components/Transaction/Transaction.css
@@ -39,7 +39,7 @@
     padding: 7% 0 10% 0;
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1024px) {
     .transaction-align {
         margin-top: 2%;
     }
@@ -55,7 +55,7 @@
 
 @media (max-width: 430px) {
     .transaction-align{
-        margin-top: 4%;
+        margin-top: 0%;
     }
 
     .transaction-align h4 {
