--- a/src/Pages/Dashboards/Dashboard.css
+++ b/src/Pages/Dashboards/Dashboard.css
@@ -56,10 +56,6 @@
   font-size: 1.2rem;
   cursor: pointer;
   border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
 }
 
 .sidebar-align2:hover, .sidebar-align3:hover {
@@ -97,12 +93,12 @@
 }
 
 .irs-container p {
-    font-size: 1.2rem;
+    font-size: 0.875rem;
     color: rgb(205, 199, 199);
 }
 
 .irs-container h5 {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .irs-align .irs-color {
@@ -116,7 +112,7 @@
 .irs-align1 {
     display: flex;
     justify-content: space-between;
-    margin-top: 2.3%;
+    margin-top: 4.3%;
 }
 
 .mrs-align {
@@ -186,6 +182,7 @@
 
 .ic-align3 {
   width: 100%;
+  height: 219px;
 }
 
 .ic-align4 {
@@ -220,7 +217,7 @@
 
 .ic-adjust1 {
   display: flex;
-  margin: 2% 0;
+  margin: 2% 0 0 0;
   justify-content: space-between;
   gap: 1rem;
 }
@@ -236,6 +233,7 @@
 
 .ic-align8 {
   width: 100%;
+  height: 219px;
 }
 
 .ic-align9 {
@@ -243,6 +241,7 @@
   justify-content: space-between;
   gap: 1rem;
 }
+
 
 .ic-align10 {
   width: 100%;
@@ -257,7 +256,7 @@
 }
 
 .ic-align10 h4 {
-  padding: 2% 0 8% 0;
+  padding: 2% 0 13% 0;
 }
 
 .ic-align10 button {
@@ -381,12 +380,24 @@
     font-size: 1.1rem;
    }
 
+   .sidebar-buttondiv {
+    margin-top: 1%;
+   }
+
+   .sidebar-buttondiv button {
+    padding: 0.5rem 1rem;
+    font-size: 0.8rem;
+} 
    .mid-container {
     margin-top: 7%;
    }
 
    .irs-container p{
     font-size: 0.9rem;
+   }
+
+   .ic-align10 h4 {
+       padding-bottom: 2%;
    }
 }
 
@@ -434,11 +445,16 @@
   
   .ic-adjust {
     grid-template-columns: 1fr;
+    gap: 5rem;
   }
   
   .ic-align4 {
     border-radius: 6px;
     padding: 5% 6%;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -ms-border-radius: 6px;
+    -o-border-radius: 6px;
 }
 
 .ic-align4 {
@@ -460,7 +476,8 @@
   }
   
   .ic-adjust1 {
-    display: block;
+    flex-direction: column;
+    gap: 8rem;
   }
   
   .ic-align4color img {
@@ -469,6 +486,7 @@
   
   .ic-align8 {
      margin-top: 2%;
+     margin-bottom: 8rem;
   }
 
   .ic-align3 {
@@ -494,6 +512,7 @@
 
   .visible {
     display: block;
+    margin-top: 5rem;
   }
 
   .ic-align7 p{
@@ -560,11 +579,8 @@
   font-size: 1.2rem;
   cursor: pointer;
   border-radius: 4px;
-  margin-bottom: 2%;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -o-border-radius: 4px;
+  margin-top: 8%;
+  margin-bottom: 6%;
 }
   
 }
@@ -583,6 +599,10 @@
   font-size: 0.5rem;
 }
 
+.ic-adjust {
+  gap: 0rem;
+}
+
 .ic-align4 p {
   font-size: 0.9rem;
 }
@@ -590,6 +610,12 @@
 
 .sidebar-buttondiv button {
   font-size: 1.2rem;
+}
+
+.ic-adjust1 {
+  margin-top: 3%;
+  gap: 0;
+  justify-content: start;
 }
 
 
@@ -600,15 +626,18 @@
 
 
 .ic-align8 {
-   margin-top: 4%;
+   margin-top: -33px;
+   margin-bottom: -30px;
 }
 
 .ic-align3 {
-  margin-bottom: 3%;
+  margin-bottom: 0;
+  margin-top: -5px;
 }
 
 .visible {
   display: block;
+  margin-top: 0;
 }
 
 .ic-align7 p{
@@ -634,6 +663,10 @@
 .ic-headerp select {
   font-size: 1.1rem;
   background-color: #0B0B0B;
+}
+
+.mc-buttondiv button{
+ margin-top: -30px; 
 }
 
 }
