--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -71,7 +71,7 @@
   border-bottom: 1px solid rgb(83, 82, 82); /* Adjust border color and width as needed */
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1024px) {
 
     .home-stabilize {
         margin-top: 10%;
