--- a/src/Pages/Nok/Nok.css
+++ b/src/Pages/Nok/Nok.css
@@ -2,6 +2,7 @@
     display: flex;
     gap: 0.5rem;
     align-items: center;
+    cursor: pointer;
 }
 
 .Nok-container p {
