--- a/src/Pages/SignUp/SignUp.css
+++ b/src/Pages/SignUp/SignUp.css
@@ -3,7 +3,7 @@
 }
 
 .home-host {
-    width: 47%;
+    width: 42%;
     margin-top: 7%;
     background-color: #0b0b0b;
     margin-left: auto;
@@ -229,7 +229,7 @@ input:-webkit-autofill,
     -o-transform: rotate(45deg);
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1024px) {
     .investor-container {
         padding: 20% 6% 10% 10%;
     }
